--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -160,10 +160,12 @@
                 font-size: 15px;
                 color: black;
                 font-weight: $fw-regular;
-                &--active {
+                &:hover {
                     color: $color-back;
                     font-weight: $fw-medium;
                 }
+                // &.active {color: $color-back;
+                // font-weight: $fw-medium;}
             }
         }
     }
@@ -308,6 +310,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            text-decoration: none;
+            color: rgb(102, 99, 99);
             &:hover {
                 background-color: gray;
                 cursor: pointer;
@@ -697,17 +701,19 @@
         text-align: left;
         margin: 100px auto;
         &_questions {
-            padding-top: 30px;
+            padding-top: 20px;
+            padding-bottom: 20px;
             padding-left: 30px;
             width: 100%;
-            height: 110px;
+            height: auto;
             text-align: left;
             border-bottom: 2px solid gray;
         }
         &_answer {
-            padding-top: 30px;
+            padding-top: 20px;
             padding-left: 30px;
-            height: 140px;
+            padding-bottom: 20px;
+            height: auto;
             width: 100%;
             text-align: left;
             border-bottom: 2px solid gray;
@@ -738,6 +744,7 @@
         height: 5px;
         background: rgb(134, 133, 133);
     }
+    /*order*/
     
     .section-form {
         .contact-form {
@@ -752,6 +759,7 @@
             }
             &__input-wrapper {
                 display: flex;
+                flex-wrap: wrap;
                 align-items: center;
                 justify-content: center;
             }
@@ -818,6 +826,7 @@
             margin: 40px auto;
         }
     }
+    /*order*/
     /*--page news--*/
     
     .section-news_block {
@@ -874,23 +883,24 @@
             font-weight: $fw-bold;
             margin-top: 16px;
             margin-bottom: 16px;
+            line-height: 25px;
         }
         &_citate {
             text-align: center;
             padding: 1%;
             background: $color-back;
-            &_info_list {
-                background: rgb(241, 241, 241);
-                @include gothamReg;
-                list-style: disc outside;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding: 10px;
-                &_item {
-                    max-width: 70%;
-                    margin-bottom: 6px;
-                }
+        }
+        &_info_list {
+            background: rgb(241, 241, 241);
+            @include gothamReg;
+            list-style: disc outside;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            &_item {
+                max-width: 70%;
+                margin-bottom: 6px;
             }
         }
     }
